--- a/maket2.css
+++ b/maket2.css
@@ -10,10 +10,9 @@
     width: 75%;
     border: solid black;
     padding: 100px;
-    
-    margin-left: 25%;
+    margin: 10px;
+    margin-left: 26%;
     margin-top: 3%;
-
 }
 
 .footer
@@ -26,9 +25,11 @@
 
 .mainLeft
 {
-width: 25%;
-
-border: solid black;
+    width: 25%;
+    border: solid black;
+    margin-top: 3%;
+    padding-top: 11.4%;
+    float: left;
 
 
 }
