--- a/vote/vote.css
+++ b/vote/vote.css
@@ -199,6 +199,24 @@ border: 3px solid #8619ca68;
     color: #5b23c3; 
 }
 
+.social-icons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.icon svg {
+    width: 32px;
+    height: 32px;
+    fill: #bbb;
+    transition: fill 0.3s ease;
+}
+
+.icon:hover svg {
+    fill: #f49042;
+}
+
 @media (max-width: 768px) {
     .nominees {
         gap: 20px;
