--- a/subscribe.css
+++ b/subscribe.css
@@ -1,6 +1,6 @@
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background: linear-gradient(to bottom, #f0f4f8, #d9e2ec); /* Фон для улучшения внешнего вида */
+    background: linear-gradient(to bottom, #f0f4f8, #d9e2ec);
     padding: 20px;
     margin: 0;
     display: flex;
@@ -11,14 +11,14 @@ body {
 
 .card {
     display: inline-block;
-    width: 23%; /* Увеличена ширина карточек */
-    height: 500px; /* Увеличена высота карточек */
+    width: 23%; 
+    height: 500px; 
     margin: 20px;
     border-top: 2px solid #b3b3b37a;
     border-left: 2px solid #c5c5c575;
     box-shadow: 5px 5px 15px #00000025;
     background: #FFFFFF50;
-    border-radius: 20px; /* Более скругленные углы */
+    border-radius: 20px; 
     overflow: hidden;
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -27,7 +27,7 @@ body {
 .card:hover {
     transform: scale(1.1);
     box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.3);
-    background: #ffffff90; /* Осветление карточки при наведении */
+    background: #ffffff90; 
 }
 
 p {
@@ -86,14 +86,14 @@ p {
 .buyButton {
     display: inline-block;
     background-color: #4caf50;
-    width: 60%; /* Увеличена ширина кнопки */
+    width: 60%; 
     padding: 15px 25px;
-    font-size: 18px; /* Увеличен размер шрифта */
+    font-size: 18px; 
     cursor: pointer;
     font-weight: bold;
     color: white;
     border: none;
-    border-radius: 30px; /* Закругленная кнопка */
+    border-radius: 30px; 
     transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
